# learn_chisel_phase

./: .gitignore  LICENSE-MIT.txt  build.sbt  build.sc  build_dep.sh  graph.md  project.scala  readme.html  readme.md  temp.md
PowerShell 7.5.0/metals/data/: metals.lock.db  metals.mv.db
analysis_app/: index.html  package.json  pnpm-lock.yaml
analysis_app/src/: App.vue  main.ts
analysis_app/src-tauri/: Cargo.toml  tauri.conf.json
analysis_app/src-tauri/src/: cmds.rs  lib.rs  main.rs
analysis_app/src-tauri/src/types/: coverage_info.rs  coverage_report.rs  mod.rs
analysis_app/src-tauri/test_data/: UART_rx_coverage_info.json
analysis_app/src/components/: CoverageDetails.vue  CoverageSummary.vue  FileUpload.vue  ModuleRootDirEditor.vue  RootDirEditor.vue  SourceViewer.vue
analysis_app/src/stores/: coverageStore.ts
analysis_app/src/types/: CoverageInfo.ts  CoverageReport.ts  TreeNode.ts
analysis_app/src/utils/: coverageUtils.ts  dialogUtils.ts  file.ts
chisel_coverage_tool/src/: CoverageGenerator.scala  CoverageTool.scala  CustomStage.scala  PortExtractor.scala  SignalPropagator.scala  main copy.scala  main.scala
chisel_coverage_tool/src-chisel5/: SignalPropagator.scala
chisel_coverage_tool/src-chisel6/: SignalPropagator.scala
chisel_coverage_tool/src/modules/: ComplexExample.scala  (+2 more)
output/: TopModule.sv  new.firrtl  new.sv  old.firrtl  old.sv  old.txt
output/obj_dir/: VTopModule.cpp  VTopModule.h  VTopModule.mk  VTopModule__ALL.cpp  VTopModule__ALL.d  VTopModule__Syms.cpp  VTopModule__Syms.h  VTopModule___024root.h  VTopModule___024root__DepSet_h07054711__0.cpp  VTopModule___024root__DepSet_h07054711__0__Slow.cpp  VTopModule___024root__DepSet_h33f2ddf5__0.cpp  VTopModule___024root__DepSet_h33f2ddf5__0__Slow.cpp  VTopModule__main.cpp  VTopModule__pch.h  VTopModule__ver.d  VTopModule_classes.mk
output1/: new.firrtl  new.sv  new_cond.firrtl  new_mux.firrtl  old.firrtl
output2/: new.firrtl  new.sv  new_cond.firrtl  new_mux.firrtl  old.firrtl  old.sv
output3/: new.sv  new_cond.firrtl  new_mux.firrtl  old.sv  old.txt  readme.md  状态机.html
output_generated/complex_example/: ComplexExample.sv  ComplexExample_coverage_info.json  coverage.bash
output_generated/example_rocket_system/: coverage.bash
output_generated/reg_module/: RegModule.sv  RegModule_coverage_info.json  coverage.bash
output_generated/rocket_alu/: RocketALU.sv  RocketALU_coverage_info.json  coverage.bash
output_generated/rocket_muldiv/: MulDiv.sv  MulDiv_coverage_info.json  coverage.bash
output_generated/rocket_test_harness/: coverage.bash
output_generated/rocket_test_harness/emulator/: CMakeLists.txt  coverage_collector.h  emulator.cc
output_generated/rocket_tile/: coverage.bash
output_generated/uart_rx/: UART_rx.sv  UART_rx_coverage_info.json  UART_rx_coverage_info_parsed.json  coverage.bash
output_generated/uart_tx/: UART_tx.sv  UART_tx_coverage_info.json  coverage.bash
output_generated/waveform_generator/: WaveformGenerator.sv  WaveformGenerator_coverage_info.json  coverage.bash
prompts/: inst_tree.txt  module_cond_map.txt  mux_cond_extractor.txt  system.txt
(+444 files in other folders)
